# Face-Recognition-Backend

./: .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  TODO.md  app.py  gunicorn.conf.py  image_processing.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_server.sh  tox.ini  training.py
database/: representations_arcface.pkl  representations_deepface.pkl  representations_deepid.pkl  representations_facenet.pkl  representations_openface.pkl  representations_vgg_face.pkl
face_rec_api/: app.py  config.py  image_processing.py  training.py  utils.py
face_rec_api/models/training/: facenet_le.pickle  facenet_re.pickle
facenet/src/: calculate_filtering_metrics.py  classifier.py  compare.py  decode_msceleb_dataset.py  download_and_extract.py  face.py  facenet.py  freeze_graph.py  lfw.py  train_softmax.py  train_tripletloss.py  validate_on_lfw.py
facenet/src/align/: align_dataset_mtcnn.py  detect_face.py
facenet/src/generative/: calculate_attribute_vectors.py  modify_attribute.py  train_vae.py
facenet/src/generative/models/: dfc_vae_large.py
facenet/src/models/: dummy.py  inception_resnet_v1.py  inception_resnet_v2.py  squeezenet.py
libfaceid/: classifier.py  detector.py  encoder.py  utils.py
libfaceid/libfaceid/: classifier.py  encoder.py
tests/: functional_tests.py  test_image_processing.py  test_utils.py
