[tool.autohooks]
pre-commit = ["autohooks.plugins.black"]

[tool.autohooks.plugins.black]
include = ["*.py"]
arguments = ["-q", "-t", "py37"]

[tool.poetry]
name = "face-recognition-backend"
version = "0.1.0"
description = ""
authors = ["Anthony Pluth <2065118-abpluth@users.noreply.gitlab.com>"]

[tool.poetry.dependencies]
python = "~3.7"
tensorflow = { version = "1.15.3", python = "~3.7" }
facenet = { version = "1.0.5", python = "~3.7" }
imutils = "^0.5.4"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
tox = "^3.23.0"
pytest = "^6.2.3"
pytest-black = "^0.3.12"
autohooks = "^21.3.0"
WebTest = "^2.0.35"
autohooks-plugin-black = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
